<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".foodiefy_welcome">

    <ImageView
        android:id="@+id/ic_back"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        tools:src="@drawable/ic_back" />

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/poppins"
        android:text="@string/welcome_text"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_toEndOf="@id/ic_back"
        android:layout_alignTop="@id/ic_back"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/logolurus"
        android:layout_width="80dp"
        android:layout_height="20dp"
        android:src="@drawable/logo_lurus"
        android:layout_toEndOf="@id/welcomeText"
        android:layout_alignTop="@id/welcomeText" />

    <ImageView
        android:id="@+id/gambarwelcome"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/gambar_welcome"
        android:layout_centerHorizontal="true"
        android:layout_alignTop="@id/welcomeText"
        android:layout_below="@id/logolurus"
        android:layout_marginTop="100dp" />

    <TextView
        android:id="@+id/penjelasanWelcome"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:fontFamily="@font/poppins"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/gambarwelcome" />

    <Button
        android:id="@+id/continueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#80006C3F"
        android:text="@string/continueButton"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/penjelasanWelcome"
        android:layout_marginTop="20dp" />
</RelativeLayout>
